feat: add manual companycam login/logout in settings
(cherry picked from commit aaed77ed2f98bb3425e0173ae0e0cb2637bd0bc3)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,8 @@
     <string name="app_key">o1peu8t9r6jrl12</string>
 
     <string name="navigation_drawer_header_title">Gemini Energy</string>
+    <string name="companyCamAuthPreferenceTitle">Login to Company Cam</string>
+    <string name="companyCamAuthPreferenceKey">companyCamAuth</string>
+    <string name="companyCamAuthPreferenceSummary">Upload to your Company Cam Account via OAuth.</string>
 
 </resources>
